--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,44 @@
+:root {
+  --primary-color: #f9f7fe;
+  --button-color: #6c63ff;
+  --secondary-color: white;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+  color: black;
+}
 h1 {
-  font-family: "Playfair Display", serif;
-  font-weight: 500;
-  font-size: 58px;
+  font-size: 86px;
 }
-h2 {
-  font-family: "Poppins", sans-serif;
-  font-size: 30px;
-  font-weight: 900;
+
+.hero {
+  background-color: var(--primary-color);
+  text-align: center;
+  padding: 160px 20px;
 }
-p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 23px;
-  font-weight: 400;
+.hero p {
+  font-family: var(--default-font-family);
+  font-size: 36px;
+  font-weight: bold;
 }
-.fa-brands {
-  color: blueviolet;
-  font-size: 50px;
+.hero h2 {
+  font-size: 24px;
+  line-height: 2;
+}
+.btn-branding {
+  background-color: var(--button-color);
+  color: var(--secondary-color);
+  border-radius: 4px;
+  padding: 15px 30px;
+  font-size: 18px;
+  line-height: 27px;
 }
