--- a/src/styles.css
+++ b/src/styles.css
@@ -19,20 +19,30 @@ h6 {
 h1 {
   font-size: 86px;
 }
+h2 {
+  font-size: 50px;
+  margin: 23px;
+}
+p {
+  font-weight: normal;
+  font-size: 15px;
+  font-family: var(--default-font-family);
+  line-height: 30px;
+}
 
 .hero {
   background-color: var(--primary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 .hero p {
   font-family: var(--default-font-family);
   font-size: 36px;
-  font-weight: bold;
+  font-weight: 400;
 }
 .hero h2 {
   font-size: 24px;
-  line-height: 2;
+  line-height: 2em;
 }
 .btn-branding {
   background-color: var(--button-color);
@@ -40,5 +50,17 @@ h1 {
   border-radius: 4px;
   padding: 15px 30px;
   font-size: 18px;
-  line-height: 27px;
+}
+.btn-branding-outline {
+  background-color: var(--primary-color);
+  color: var(--button-color);
+  border: 1px solid var(--button-color);
+  border-radius: 4px;
+  padding: 15px 30px;
+  font-size: 18px;
+}
+@media (max-width: 900px) {
+  h1 {
+    font-size: 70px;
+  }
 }
