--- a/src/styles.css
+++ b/src/styles.css
@@ -25,8 +25,8 @@ h2 {
 }
 p {
   font-weight: normal;
-  font-size: 15px;
   font-family: var(--default-font-family);
+  font-size: 15px;
   line-height: 30px;
 }
 
@@ -40,6 +40,7 @@ p {
   font-size: 36px;
   font-weight: 400;
 }
+
 .hero h2 {
   font-size: 24px;
   line-height: 2em;
@@ -48,7 +49,7 @@ p {
   background-color: var(--button-color);
   color: var(--secondary-color);
   border-radius: 4px;
-  padding: 15px 30px;
+  padding: 13px 20px;
   font-size: 18px;
 }
 .btn-branding-outline {
@@ -59,8 +60,28 @@ p {
   padding: 15px 30px;
   font-size: 18px;
 }
+
+.about-section {
+  padding: 30px 20px;
+}
+.about-section h1 {
+  font-size: 86px;
+  line-height: 1.5;
+}
+.about-section h2 {
+  font-size: 23px;
+}
+
+.about-section p {
+  font-size: 15px;
+  background-color: var(--primary-color);
+  padding: 15px 10px;
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 70px;
+  }
+  p {
+    text-align: center;
   }
 }
