--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,21 @@ p {
   background-color: var(--primary-color);
   padding: 15px 10px;
 }
+.content-container {
+  background-color: var(--primary-color);
+}
+.content h1 {
+  font-size: 40px;
+  color: var(--button-color);
+}
+.content h3 {
+  font-family: var(--default-font-family);
+  font-size: 23px;
+  color: var(--button-color);
+}
+.content p {
+  font-size: 14px;
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 70px;
