--- a/src/styles.css
+++ b/src/styles.css
@@ -113,10 +113,17 @@ p {
 .network {
   display: flex;
   justify-content: center;
-
 }
 .contact-content a {
   text-decoration: none;
   color: black;
   font-weight: bold;
+}
+.fa-sharp {
+  color: black;
+  font-size: 20px;
+}
+.fa-brands {
+  color: black;
+  font-size: 20px;
 }
