--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
-
 h1,
 h2,
 h3,
@@ -29,12 +28,25 @@ p {
   font-size: 15px;
   line-height: 30px;
 }
-@media (max-width: 900px) {
+nav {
+  padding: 30px 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  color: #6c63ff;
+  line-height: 42px;
+}
+
+@media (max-width: 768px) {
   h1 {
     font-size: 70px;
   }
   p {
     text-align: center;
+  }
+  .bar-navigation {
+    align-items: center;
   }
 }
 
@@ -126,4 +138,48 @@ p {
 .fa-brands {
   color: black;
   font-size: 20px;
+}
+
+.container {
+  width: 100%;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+}
+.logo {
+  max-width: 150px;
+}
+
+.bar-navigation {
+  list-style: none;
+  display: flex;
+}
+
+.bar-navigation li {
+  margin-right: 70px;
+}
+
+.bar-navigation a {
+  text-decoration: none;
+  color: var(--button-color);
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.bar-navigation a:hover {
+  color: #000;
+}
+.hero .follow-me {
+  font-size: 16px;
+}
+.follow-me {
+  margin-top: 20px;
+}
+.follow-me i {
+  margin-left: 9px;
+  color: var(--button-color);
 }
