--- a/src/styles.css
+++ b/src/styles.css
@@ -25,8 +25,8 @@ h2 {
 p {
   font-weight: normal;
   font-family: var(--default-font-family);
-  font-size: 15px;
   line-height: 30px;
+  font-size: 15px;
 }
 nav {
   padding: 30px 0;
@@ -54,15 +54,15 @@ nav li {
 }
 .hero p {
   font-family: var(--default-font-family);
-  font-size: 36px;
   font-weight: 400;
+  font-size: 24px;
 }
 
 .hero h2 {
-  font-size: 24px;
+  font-size: 34px;
   line-height: 2em;
+  font-weight: 300;
 }
-
 .btn-branding {
   background-color: var(--button-color);
   border: 1px solid var(--button-color);
@@ -85,9 +85,11 @@ nav li {
 }
 .work {
   text-align: center;
+  color: #000;
+  font-weight: 300;
 }
 .about-section {
-  padding: 30px 20px;
+  padding: 10px 20px;
 }
 .about-section h1 {
   font-size: 86px;
@@ -107,29 +109,41 @@ nav li {
 }
 .content h1 {
   font-size: 40px;
+  color: var(--button-color);
 }
 .content h3 {
   font-family: var(--default-font-family);
   font-size: 23px;
+  color: var(--button-color);
 }
 .content p {
   font-size: 14px;
+}
+.img-fluid {
+  width: 500px;
+  display: block;
+  margin: 0 auto;
 }
 .contact-container {
   background-color: var(--primary-color);
 }
 .contact-content h1 {
-  font-size: 40px;
-  line-height: 160px;
+  font-size: 50px;
+  line-height: 150px;
+  color: var(--button-color);
 }
 .contact-content h3 {
-  font-size: 25px;
+  font-size: 27px;
   text-align: center;
-  color: var(--button-color);
+  color: #000;
 }
 .network {
   display: flex;
   justify-content: center;
+}
+.network i {
+  color: var(--button-color);
+  font-size: 20px;
 }
 .contact-content a {
   text-decoration: none;
@@ -178,13 +192,12 @@ nav li {
 .bar-navigation a:hover {
   color: #000;
 }
-.hero .follow-me {
-  font-size: 16px;
+
+.coded-by {
+  text-align: center;
+  margin: 20px;
 }
-.follow-me {
-  margin-top: 20px;
-}
-.follow-me i {
-  margin-left: 9px;
-  color: var(--button-color);
+.sunny {
+  background-color: var(--primary-color);
+  padding: 10px;
 }
