--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@ h2 {
   font-size: 50px;
   margin: 23px;
 }
+
 p {
   font-weight: normal;
   font-family: var(--default-font-family);
@@ -41,13 +42,12 @@ nav li {
   h1 {
     font-size: 70px;
   }
+
   p {
     text-align: center;
   }
 }
-.front-end {
-  color: var(--button-color);
-}
+
 
 .hero {
   background-color: var(--primary-color);
@@ -64,6 +64,7 @@ nav li {
   font-size: 34px;
   line-height: 2em;
   font-weight: 300;
+  color: var(--button-color);
 }
 .btn-branding {
   background-color: var(--button-color);
@@ -86,19 +87,22 @@ nav li {
   font-size: 18px;
 }
 .work {
-  text-align: center;
   color: #000;
-  font-weight: 300;
+  padding: 15px 20px;
+}
+.work p {
+  font-size: 17px;
 }
 .about-section {
   padding: 10px 20px;
 }
 .about-section h1 {
-  font-size: 86px;
+  font-size: 60px;
   line-height: 1.5;
 }
 .about-section h2 {
-  font-size: 23px;
+  font-size: 24px;
+  color: var(--button-color);
 }
 
 .about-section p {
@@ -110,7 +114,7 @@ nav li {
   background-color: var(--primary-color);
 }
 .content h1 {
-  font-size: 40px;
+  font-size: 47px;
   color: var(--button-color);
 }
 .content h3 {
@@ -130,7 +134,7 @@ nav li {
   background-color: var(--primary-color);
 }
 .contact-content h1 {
-  font-size: 50px;
+  font-size: 47px;
   line-height: 150px;
   color: var(--button-color);
 }
@@ -197,6 +201,9 @@ nav li {
 .coded-by {
   text-align: center;
   margin: 20px;
+}
+.hero .follow-me {
+  font-size: 17px;
 }
 .sunny {
   background-color: var(--primary-color);
