--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ nav li {
   line-height: 42px;
 }
 
-@media (max-width: 900px) {
+@media (min-width: 900px) {
   h1 {
     font-size: 60px;
   }
@@ -51,7 +51,7 @@ nav li {
 .hero {
   background-color: var(--primary-color);
   text-align: center;
-  padding: 80px 20px;
+  padding: 50px 20px;
 }
 .hero p {
   font-family: var(--default-font-family);
@@ -94,10 +94,11 @@ nav li {
 }
 .about-section {
   padding: 10px 20px;
+  margin-top: -20px;
 }
 .about-section h1 {
   font-size: 60px;
-  line-height: 1.5;
+  line-height: 1.3;
 }
 .about-section h2 {
   font-size: 24px;
@@ -134,8 +135,9 @@ nav li {
 }
 .contact-content h1 {
   font-size: 60px;
-  line-height: 150px;
+  line-height: 100px;
   color: var(--button-color);
+  margin: -30px;
 }
 .contact-content h3 {
   font-size: 27px;
@@ -172,7 +174,7 @@ nav li {
   padding: 30px 0;
 }
 .logo {
-  max-width: 150px;
+  max-width: 200px;
 }
 
 .bar-navigation {
