--- a/src/styles.css
+++ b/src/styles.css
@@ -28,15 +28,6 @@ p {
   line-height: 30px;
   font-size: 15px;
 }
-nav {
-  padding: 30px 0;
-}
-nav li {
-  display: inline;
-  list-style: none;
-  color: var(--button-color);
-  line-height: 42px;
-}
 
 @media (min-width: 900px) {
   h1 {
@@ -93,12 +84,12 @@ nav li {
   font-size: 17px;
 }
 .about-section {
-  padding: 10px 20px;
+  padding: 40px 50px;
   margin-top: -20px;
 }
 .about-section h1 {
   font-size: 60px;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 .about-section h2 {
   font-size: 24px;
@@ -135,7 +126,7 @@ nav li {
 }
 .contact-content h1 {
   font-size: 60px;
-  line-height: 100px;
+  line-height: 170px;
   color: var(--button-color);
 }
 .contact-content h3 {
@@ -164,36 +155,19 @@ nav li {
   color: var(--button-color);
   font-size: 20px;
 }
-.container {
-  width: 100%;
-}
 
-.navigation {
-  align-items: center;
-  padding: 30px 0;
-}
 .logo {
-  max-width: 200px;
+  max-width: 150px;
 }
-
-.bar-navigation {
-  list-style: none;
-  display: flex;
+.active {
+  color: var(--button-color) !important;
 }
-
-.bar-navigation li {
-  margin-right: 70px;
-}
-
-.bar-navigation a {
-  text-decoration: none;
-  color: var(--button-color);
+.nav-item {
+  padding: 0 30px;
+  margin: 15px;
+  display: inline;
   font-weight: bold;
   font-size: 18px;
-}
-
-.bar-navigation a:hover {
-  color: #000;
 }
 
 .coded-by {
